feat: :sparkles: Add Logind and main quoter page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,10 +2,10 @@
     <form [formGroup]="profileForm" class="custom-form" (ngSubmit)="login()">
       <h1>Login</h1>
       <input
-        type="email"
-        formControlName="email"
-        name="email"
-        placeholder="Email"
+        type="user"
+        formControlName="username"
+        name="username"
+        placeholder="Nombre de Usuario"
         required="required"
       />
       <input
