feat: Save quoters

--- a/src/app/quoter/quoter.component.html
+++ b/src/app/quoter/quoter.component.html
@@ -130,7 +130,19 @@
             <div class="container has-text-centered">
               <div class="field is-grouped">
                 <div class="control">
-                  <button class="button is-primary">Guardar cotizacion</button>
+                  <button 
+                  class="button is-primary is-light"
+                  (click)="createQuoter()"
+                >Guardar cotizacion</button>
+                </div>
+   
+              </div>
+            </div>
+            <br>
+            <div class="container has-text-centered">
+              <div class="field is-grouped">
+                <div class="control">
+                  <button class="button is-primary">Convertir esta cotizacion a venta</button>
                 </div>
    
               </div>
